# wesl-js

./: .gitignore  .gitmodules  .ignore  .markdownlint.json  .pnpmfile.cjs  Build-Tools.md  Developing.md  README.md  WESL-Packages.md  biome.jsonc  bump.config.ts  deno.json  nodemon-typecheck-watch.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  syncpack.config.ts  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.ts  wallaby-wesl.js  wallaby.js
examples/: tsconfig.examples.browser.json  tsconfig.examples.node.json
integration-tests/: Benchmarking.bench.ts  BulkTest.test.ts  LinkGlob.test.ts.skip  LinkPackage.test.ts  LinkPackage.test.ts.skip  StripWgsl.test.ts  deno.json  findBulkTests.ts  stripWgsl.ts  wgpu-integration.test.ts
linker/: eslint.config.mjs  package.json  pnpm-lock.yaml  wallaby-bulk-tests.conf.js  wallaby.js
mini-parse/: CombinatorTypes.ts  Parser.ts  ParserCollect.ts  ParserCombinator.ts  ParserLogging.ts  ParserTracing.ts  SrcMapBuilder.ts  deno.json  expect-snapshot-rule.ts  mod.ts  package.json  tsconfig.vite.json  vite.config.ts
scripts/: build_npm.ts  expect-snapshot-rule.ts  prep-examples.ts
testlib/: README.md  deno.json
tools/: .gitignore  .oxlintrc.json  Build-Tools.md  deno.json  global.d.ts  (+16 more)
tools/npm-resolve-wesl/: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md
tools/npm-resolve-wesl/examples/: basic_usage.rs
tools/npm-resolve-wesl/src/: lib.rs  main.rs  npm_resolver.rs  package_name_utils.rs  parse.rs  resolve.rs
tools/npm-resolve-wesl/tests/: integration_test.rs  lygia_test.rs
(+239 files in other folders)
